# aoc

./: .gitignore  CMakeLists.txt
2015/: CMakeLists.txt  main.cpp
2015/include/: days.hpp
2015/src/: day1.cpp  day2.cpp  day3.cpp  day4.cpp  day5.cpp  day6.py  day7.cpp
2023/: day1.sh  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
2024/: aoc.py
